@@ -1,5 +1,7 @@
 package com.demo.assessment.model.types;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public enum DeliveryStatus {
@@ -9,6 +11,6 @@ public enum DeliveryStatus {
     ORDER_DELIVERED;
 
     public static List<DeliveryStatus> getInProgressStatus() {
-        return List.of(ORDER_RECEIVED, ORDER_PREPARING, ORDER_PICKED_UP);
+        return new ArrayList<>(Arrays.asList(ORDER_RECEIVED, ORDER_PREPARING, ORDER_PICKED_UP));
     }
 }
